Fixed the alignment of the main page

--- a/src/web/css/index.scss
+++ b/src/web/css/index.scss
@@ -138,10 +138,10 @@
   
   .fixed-bottom {
     position: fixed;
-    padding-bottom: 45px;
+    padding-bottom: 55px;
     margin-bottom: 0px;
     bottom: 0px;
-    left: 80px;
+    left: 60px;
     width: 90%;
     color: white;
   }
@@ -206,8 +206,9 @@
       width: 87%;
     }
     .mid-center {
-      padding-left: 10%;
-      width: 80%;
+      padding-top: 20%;
+      left: 5%;
+      width: 87%;
     }
   }
   
